metalLB/manifests/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-traefik-ingress
  namespace: default
spec:
  ingressClassName: "traefik"
  rules:
  - host: web-app-1.home-k8s.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app1
            port:
              number: 80
# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web-app-nginx-ingress
#   namespace: default
# spec:
#   ingressClassName: "nginx"
#   rules:
#   - host: web-app-2.home-k8s.lab
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: web-app2
#             port:
#               number: 80
